--- a/Team9/WebContent/WEB-INF/web.xml
+++ b/Team9/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>Team9</display-name>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 <!-- 	<servlet>
 		<servlet-name>ServletOne</servlet-name>
